--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
         <item>Technology</item>
         <item>Miscellaneous</item>
     </string-array>
+
+    <string-array name="time">
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+    </string-array>
 </resources>
